syntax = "proto2";

package server.protobuf.messages;

message StaffMovementsMessage {
    repeated StaffMovementMessage staffMovements = 1;
    optional int64 createdAt = 2;
}

message StaffMovementsStateSnapshotMessage {
    repeated StaffMovementMessage staffMovements = 1;
}

message StaffMovementMessage {
    optional string terminalName = 1;
    optional string reason = 2;
    optional int64 time = 3;
    optional int32 delta = 4;
    optional string uUID = 5;
    optional string queueName = 6;
    optional int64 createdAt = 7;
}
